Word wrap fix

--- a/src/assets/app/css/main.css
+++ b/src/assets/app/css/main.css
@@ -6,6 +6,10 @@ body {
     margin-right: 15px;
 }
 
+.break-text {
+    word-wrap: break-word;
+}
+
 /*
  * Sidebar
  */
